--- a/blocks/header.css
+++ b/blocks/header.css
@@ -30,6 +30,20 @@
   }
 }
 
+@media (max-width: 768px) {
+  .header__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 56px;
+    line-height: 1.2;
+    color: black;
+    margin: 0;
+    padding: 30px 0 0 0;
+
+    text-align: center;
+  }
+}
+
 .header__description {
   padding: 160px 0 0 80px;
   font-style: normal;
