--- a/blocks/description.css
+++ b/blocks/description.css
@@ -13,17 +13,6 @@
   color: #4689ff;
 }
 
-@media (max-width: 1280px) {
-  .description__title {
-    margin: 0;
-    text-align: center;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    color: #4689ff;
-  }
-}
-
 .description__content {
   margin: 0;
   width: 80%;
@@ -32,4 +21,19 @@
   font-size: 18px;
   line-height: 1.5;
   color: black;
+}
+
+@media (max-width: 1280px) {
+  .description__title {
+    margin: 0 5px 0 5px;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    color: #4689ff;
+  }
+
+  .description__content {
+    margin: 0 5px 0 5px;
+  }
 }
