--- a/blocks/header.css
+++ b/blocks/header.css
@@ -5,6 +5,17 @@
   overflow: hidden;
   margin: 0;
   font-family: "Roboto", sans-serif;
+  font-size: 78px;
+}
+
+.nav {
+  display: flex;
+  margin-top: 20px;
+}
+.nav__logo {
+  width: 200px;
+  height: 60px;
+  margin: 0;
 }
 
 .header__title {
@@ -17,6 +28,27 @@
   padding: 120px 0 0 80px;
 }
 
+.header__description {
+  padding: 160px 0 0 80px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  max-width: 310px;
+  color: #333333;
+}
+
+@media (max-width: 320px) {
+  .nav {
+    justify-content: center;
+  }
+
+  .nav__logo {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 @media (max-width: 1280px) {
   .header__title {
     font-style: normal;
@@ -27,6 +59,7 @@
     margin: 0 auto;
     padding: 50px auto 0 auto;
     text-align: center;
+    justify-content: center;
   }
 }
 
@@ -34,24 +67,28 @@
   .header__title {
     font-style: normal;
     font-weight: bold;
-    font-size: 56px;
+    font-size: 60%;
     line-height: 1.2;
     color: black;
     margin: 0;
     padding: 30px 0 0 0;
-
     text-align: center;
+    justify-content: center;
   }
 }
 
-.header__description {
-  padding: 160px 0 0 80px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 30px;
-  max-width: 310px;
-  color: #333333;
+@media (max-width: 320px) {
+  .header__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 50%;
+    line-height: 1.2;
+    color: black;
+    margin: 0;
+    padding: 30px 0 0 0;
+    text-align: center;
+    justify-content: center;
+  }
 }
 
 @media (max-width: 1280px) {
