--- a/blocks/oakley.css
+++ b/blocks/oakley.css
@@ -29,11 +29,15 @@
 
 @media (max-width: 1280px) {
   .oakley__title {
-    margin: 60px;
+    margin: 60px 5px 0 5px;
     text-align: center;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     color: #4689ff;
+  }
+
+  .oakley__content {
+    margin: 60px 5px 0 5px;
   }
 }
