--- a/blocks/techniques.css
+++ b/blocks/techniques.css
@@ -5,6 +5,7 @@
   align-items: center;
   margin: auto;
   font-family: "Roboto", sans-serif;
+  font-size: 60px;
 }
 
 .techniques__title {
@@ -26,4 +27,96 @@
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  padding-left: 0;
+  max-width: 920px;
+  column-gap: 100px;
+  row-gap: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
+@media (max-width: 768px) {
+  .techniques__title {
+    font-size: 60%;
+  }
+
+  .techniques__subtitle {
+    font-size: 40%;
+  }
+}
+
+@media (max-width: 1280px) {
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* duas colunas */
+    gap: 20px; /* espaço entre os cards */
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    justify-content: center; /* centraliza a grade dentro do container */
+  }
+}
+
+@media (max-width: 768px) {
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* duas colunas */
+    gap: 20px; /* espaço entre os cards */
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    justify-content: center; /* centraliza a grade dentro do container */
+  }
+}
+
+@media (max-width: 520px) {
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr); /* duas colunas */
+    gap: 20px; /* espaço entre os cards */
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    justify-content: center; /* centraliza a grade dentro do container */
+  }
+}
+
+.cards__item {
+  background-color: #fff;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 240px;
+  align-self: flex-start;
+}
+
+.cards__image {
+  margin: 0;
+  height: 160px;
+  width: 160px;
+  margin: 60px 40px 43px 40px;
+}
+
+.cards__title {
+  margin: 0;
+  margin-bottom: 16px;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 1.15;
+  text-align: center;
+}
+
+.cards__description {
+  margin: 0;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.4;
+  text-align: center;
 }
