--- a/blocks/khan.css
+++ b/blocks/khan.css
@@ -1,7 +1,6 @@
 .khan {
   padding: 105px 15px 0px 15px;
   background: rgba(242, 242, 242, 255);
-  font-family: "Roboto", sans-serif;
 }
 
 .khan__content {
@@ -10,38 +9,46 @@
   max-width: 80%;
   margin: 0 auto 0 auto;
   justify-self: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 30px;
 }
 
 .khan__author {
   margin: 0;
   padding-bottom: 25px;
+  font-size: 60%;
 }
 
 .khan__title {
   margin: 0;
   padding-bottom: 50px;
+  font-size: 100%;
 }
 
 .khan__quote {
   display: grid;
   grid-template-columns: 89%;
   grid-template-rows: auto auto auto;
+  font-size: 14px;
 }
 
 .khan__quote-author {
   margin: 0;
   padding-bottom: 10px;
   font-weight: bold;
+  font-size: 18px;
 }
 
 .khan__quote-author-subline {
   margin: 0;
   padding-bottom: 68px;
   font-weight: 400;
+  font-size: 18px;
 }
 
 .khan__quote-text {
   padding-bottom: 36px;
+  font-size: 100%;
 }
 
 .khan__book-container {
@@ -51,6 +58,14 @@
   padding: 0 0 0 15px;
   max-height: 450px;
   overflow: hidden;
+}
+
+.book-pic {
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .book-link {
@@ -64,10 +79,25 @@
   color: #4689ff;
 }
 
-.book-pic {
-  max-width: 100%;
-  max-height: 100%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+@media (max-width: 768px) {
+  .khan {
+    padding: 50px 15px 0px 15px;
+  }
+
+  .khan__author {
+    margin: 0;
+    padding-bottom: 25px;
+    font-size: 28px;
+  }
+
+  .khan__title {
+    margin: 0;
+    padding-bottom: 50px;
+    font-size: 28px;
+    line-height: 1.2;
+  }
+
+  .khan__book-container {
+    display: none;
+  }
 }
