--- a/blocks/kaufman.css
+++ b/blocks/kaufman.css
@@ -91,12 +91,11 @@
   .kaufman__content {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    /* grid-template-rows: repeat(2, 1fr); */
     max-width: 80%;
     margin: 0 auto;
     column-gap: 10px;
     row-gap: 15px;
-    padding: 0;
+    padding: 30px 0 0 0;
     z-index: 3;
   }
 }
